--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,5 +8,5 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: "1.23.5"
-      - run: go test
-      - run: go math.go
+      - run: go run test
+      - run: go run math.go
