--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,5 +8,6 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: "1.23.5"
-      - run: go run test
-      - run: go run math.go
+      - run: go test ./...
+      - run: go build -o math ./math.go
+      - run: ./math
