fix: build math to execute

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,5 +9,5 @@ jobs:
         with:
           go-version: "1.23.5"
       - run: go test ./...
-      - run: go build -o math ./math.go
+      - run: go build -o math ./math.go # Assuming the main file is named math.go
       - run: ./math
